kubernetes/apps/database/storage/s3/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP}-internal
  annotations:
    reloader.stakater.com/auto: "true"
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`s3.${CLUSTER_DOMAIN}`)
    kind: Rule
    services:
    - name: ${APP}
      port: http
      passHostHeader: true
    middlewares:
    - name: internal-network
      namespace: network
  - match: Host(`s3ro.${CLUSTER_DOMAIN}`)
    kind: Rule
    services:
    - name: ${APP}
      port: ro
      passHostHeader: true
    middlewares:
    - name: internal-network
      namespace: network
